# jewellery-catalogue

./: .env.staging  .fallowrc.json  .github-migrated  .gitignore  .gitlab-ci.yml  .releaserc.json  .yarnrc.yml  CHANGELOG.md  Dockerfile.api  Dockerfile.web  LICENSE  README.md  biome.json  bunfig.toml  claude.md  config.env  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml  env.staging.example  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
.cursor/: code-quality-rules.mdc  playwright-mcp-rules  rules
.github/workflows/: ci-cd.yml  pipeline.yml  pull-request.yml  semgrep.yml
api/: Cargo.toml
api/src/: db.rs  error.rs  handler.rs  main.rs  minio_bucket.rs  model.rs  response.rs
docs/superpowers/plans/: 2026-06-02-variant-material-propagation.md  2026-07-15-etsy-listing-import.md  2026-07-16-etsy-oauth-connection.md  2026-07-18-design-authoring-upgrades.md  2026-07-18-push-to-etsy-as-draft.md  2026-07-19-etsy-integration-remaining-work.md  2026-07-19-etsy-status-and-listings.md  2026-07-19-link-etsy-listings-script.md  2026-07-20-etsy-reconcile-listings.md
docs/superpowers/specs/: 2026-06-01-variant-material-propagation-design.md  2026-07-15-etsy-listing-import-design.md  2026-07-16-etsy-api-integration-design.md  2026-07-20-etsy-reconcile-listings-design.md
scripts/: clean-orphaned-tags.sh
scripts/link-etsy-listings/: index.ts  mappers.test.ts  mappers.ts
web/: .gitignore  index.html  package.json
web/src/: index.tsx
web/src/api/: getApiUrl.ts
web/src/constants/: routes.ts  types.ts
web/src/style/: theme.ts
(+36 files in other folders)
